Prepare the project for adding additional compilers (#73)